// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders snapshot for App component 1`] = `
<div
  className="sc-bdnxRM hOUDMW container"
>
  <h1
    className="sc-gtsrHT gHZkOl"
  >
    My Hacker Stories with 
    0
     comments.
  </h1>
  <form
    className="search-form"
    onSubmit={[Function]}
  >
    <label
      htmlFor="search"
    >
      <strong>
        Search:
      </strong>
    </label>
     
    <input
      id="search"
      onChange={[Function]}
      type="text"
      value="React"
    />
    <button
      className="button buttonLarge"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </form>
  <hr />
</div>
`;

exports[`Item renders snapshot 1`] = `
<div
  className="sc-dlnjwi gqdCKt"
>
  <span
    style={
      Object {
        "width": "40%",
      }
    }
  >
    <a
      href="https://reactjs.org/"
    >
      React
    </a>
  </span>
  <span
    className="sc-hKFxyN bSdccK"
    width="30%"
  >
    Jordan Walke
  </span>
  <span
    className="sc-hKFxyN bScDbQ"
    width="10%"
  >
    3
  </span>
  <span
    className="sc-hKFxyN bScDbQ"
    width="10%"
  >
    4
  </span>
  <span
    className="sc-hKFxyN bScDbQ"
    width="10%"
  >
    <button
      className="button button_small"
      onClick={[Function]}
      type="button"
    >
      <svg
        height="18px"
        width="18px"
      >
        check.svg
      </svg>
    </button>
  </span>
</div>
`;

exports[`List renders snapshot for List component 1`] = `
Array [
  <div
    className="sc-dlnjwi gqdCKt"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href="https://reactjs.org/"
      >
        React
      </a>
    </span>
    <span
      className="sc-hKFxyN bSdccK"
      width="30%"
    >
      Jordan Walke
    </span>
    <span
      className="sc-hKFxyN bScDbQ"
      width="10%"
    >
      3
    </span>
    <span
      className="sc-hKFxyN bScDbQ"
      width="10%"
    >
      4
    </span>
    <span
      className="sc-hKFxyN bScDbQ"
      width="10%"
    >
      <button
        className="button button_small"
        onClick={[Function]}
        type="button"
      >
        <svg
          height="18px"
          width="18px"
        >
          check.svg
        </svg>
      </button>
    </span>
  </div>,
  <div
    className="sc-dlnjwi gqdCKt"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href="https://redux.js.org/"
      >
        Redux
      </a>
    </span>
    <span
      className="sc-hKFxyN bSdccK"
      width="30%"
    >
      Dan Abramov, Andrew Clark
    </span>
    <span
      className="sc-hKFxyN bScDbQ"
      width="10%"
    >
      2
    </span>
    <span
      className="sc-hKFxyN bScDbQ"
      width="10%"
    >
      5
    </span>
    <span
      className="sc-hKFxyN bScDbQ"
      width="10%"
    >
      <button
        className="button button_small"
        onClick={[Function]}
        type="button"
      >
        <svg
          height="18px"
          width="18px"
        >
          check.svg
        </svg>
      </button>
    </span>
  </div>,
]
`;

exports[`SearchForm renders snapshot for SearchForm Component 1`] = `
<form
  className="search-form"
  onSubmit={[MockFunction]}
>
  <label
    htmlFor="search"
  >
    <strong>
      Search:
    </strong>
  </label>
   
  <input
    id="search"
    onChange={[MockFunction]}
    type="text"
    value="React"
  />
  <button
    className="button buttonLarge"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;
